# 3d-voxel-game

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  blank
scripts/: bootstrap_build.ps1
src/: main.cpp
